# Traffic-Simulator

./: CMakeLists.txt  collider.cpp  main.cpp  spawner.cpp  trafficlight.cpp  trafficlight.h  vehicle.cpp  vehicle.h
